// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smooch-action-disconnect Everthing is successful Walkthrough when no resource attachments are provided passes in the correct arguments to docClient.delete() 1`] = `
Array [
  Array [
    Object {
      "ConditionExpression": "attribute_exists(SmoochUserId)",
      "Key": Object {
        "SmoochUserId": "5e31c81640a22c000f5d7f90",
      },
      "TableName": "us-east-1-dev-smooch-interactions",
    },
  ],
]
`;

exports[`smooch-action-disconnect Everthing is successful Walkthrough when no resource attachments are provided passes in the correct arguments to sqs.sendMessage() in createMessagingTranscript() 1`] = `
Array [
  Object {
    "MessageBody": "{\\"tenantId\\":\\"66d83870-30df-4a3b-8801-59edff162034\\",\\"interactionId\\":\\"66d83870-30df-4a3b-8801-59edff162070\\",\\"artifactId\\":\\"5e31c81640a22c000f5d7f95\\",\\"appId\\":\\"5e31c81640a22c000f5d7f28\\",\\"userId\\":\\"5e31c81640a22c000f5d7f90\\"}",
    "QueueUrl": "queueurl",
  },
]
`;

exports[`smooch-action-disconnect Everthing is successful Walkthrough when resource attachments are provided passes in the correct arguments to SmoochCore 1`] = `
Array [
  Array [
    Object {
      "keyId": "id",
      "scope": "app",
      "secret": "secret",
      "serviceUrl": "mock-amooch-api-url",
    },
  ],
]
`;

exports[`smooch-action-disconnect Everthing is successful Walkthrough when resource attachments are provided passes in the correct arguments to doclient.update() 1`] = `
Array [
  Array [
    Object {
      "ConditionExpression": "attribute_exists(SmoochUserId) AND attribute_exists(InteractionId)",
      "ExpressionAttributeValues": Object {
        ":t": "00:00:00",
      },
      "Key": Object {
        "SmoochUserId": "5e31c81640a22c000f5d7f90",
      },
      "ReturnValues": "UPDATED_NEW",
      "TableName": "us-east-1-dev-smooch-interactions",
      "UpdateExpression": "set LatestCustomerMessageTimestamp = :t",
    },
  ],
]
`;

exports[`smooch-action-disconnect Everthing is successful Walkthrough when resource attachments are provided passes in the correct arguments to smooch.appUsers.sendMessage() 1`] = `
Array [
  Array [
    Object {
      "appId": "5e31c81640a22c000f5d7f28",
      "message": Object {
        "metadata": Object {
          "from": "System",
          "interactionId": "66d83870-30df-4a3b-8801-59edff162070",
          "type": "system",
        },
        "role": "appMaker",
        "text": "undefined disconnected.",
        "type": "text",
      },
      "userId": "5e31c81640a22c000f5d7f90",
    },
  ],
]
`;

exports[`smooch-action-disconnect Everthing is successful Walkthrough when resource attachments are provided passes in the correct arguments to sqs.sendMessage() in sendFlowActionResponse() 1`] = `
Array [
  Object {
    "MessageBody": "{\\"tenantId\\":\\"66d83870-30df-4a3b-8801-59edff162034\\",\\"interactionId\\":\\"66d83870-30df-4a3b-8801-59edff162070\\",\\"data\\":{\\"source\\":\\"smooch\\",\\"subId\\":\\"5e31c81640a22c000f5d7f55\\",\\"metadata\\":{},\\"update\\":{}}}",
    "QueueUrl": "queueurl",
  },
]
`;

exports[`smooch-action-disconnect Everthing is successful Walkthrough when resource attachments are provided passes in the correct arguments to sqs.sendMessage() in updateInteractionMetadata() 1`] = `
Array [
  Object {
    "MessageBody": "{\\"tenantId\\":\\"66d83870-30df-4a3b-8801-59edff162034\\",\\"interactionId\\":\\"66d83870-30df-4a3b-8801-59edff162070\\",\\"source\\":\\"smooch\\",\\"metadata\\":{\\"app-id\\":\\"5e31c81640a22c000f5d7f28\\",\\"user-id\\":\\"5e31c81640a22c000f5d7f90\\",\\"artifact-id\\":\\"5e31c81640a22c000f5d7f95\\",\\"participants\\":[]}}",
    "QueueUrl": "queueurl",
  },
]
`;

exports[`smooch-action-disconnect throws an error when there is a problem retrieving cx credentials 1`] = `"Error retrieving cx credentials"`;

exports[`smooch-action-disconnect throws an error when there is a problem retrieving digital channels credentials (thrown by SmoochCore) 1`] = `"Error retrieving digital channels credentials"`;

exports[`smooch-action-disconnect throws an error when there is a problem retrieving digital channels credentials 1`] = `"Error retrieving digital channels credentials"`;

exports[`smooch-action-disconnect throws an error when there is a problem sending message 1`] = `"Error sending message"`;

exports[`smooch-action-disconnect throws an error when there is a problem sending resource interrupt 1`] = `"Error sending resource interrupt"`;

exports[`smooch-action-disconnect throws an error when there is a problem updating interaction metadata 1`] = `"Error updating interaction metadata"`;
